# bluestar

./: .gitignore  CMakeLists.txt  animation.c  animation.h  bsutils.c  bsutils.h  inputhandle.c  inputhandle.h  main.c  map.c  map.h  physics.c  physics.h  player.h
Assets/: tilemap.tiled-session
Assets/Tilemaps/Tilemap_Assets/tilesets/: Ground.tsx
Assets/levels/: level_one.tmx  tutorial_level.tmx
src/: CMakeLists.txt  animation.c  animation.h  audioman.c  audioman.h  bsutils.h  cameraman.c  cameraman.h  debugutils.c  debugutils.h  inputhandle.c  inputhandle.h  main.c  map.c  map.h  physics.c  physics.h  player.c  player.h  skill.c  skill.h
src/entity/: enemy.c  enemy.h  magic.c  magic.h  player.c  player.h
src/maps/: MapCollision.c  MapCollision.h  TmxCollisionMapper.c  TmxCollisionMapper.h  map.c  map.h
src/utils/: bsutils.c  bsutils.h  debugutils.c  debugutils.h
tmx_/: raytmx.h
tmx_/lib/cmake/tmx/: tmxExports-release.cmake
